# src/handler/rest/user.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"go-far/src/config/middleware"
+	"go-far/src/config/validator"
 	"go-far/src/model/dto"
 	"go-far/src/model/entity"
 	x "go-far/src/model/errors"
@@ -37,7 +38,7 @@ func (e *rest) CreateUser(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	if err := dto.ValidateRequest(&req); err != nil {
+	if err := validator.ValidateRequest(&req); err != nil {
 		zerolog.Ctx(ctx).Warn().Err(err).Msg("validation_failed_create_user")
 		e.httpRespError(w, r, err)
 		return
@@ -131,30 +132,6 @@ func (e *rest) ListUsers(w http.ResponseWriter, r *http.Request) {
 	e.httpRespSuccess(w, r, http.StatusOK, users, pagination)
 }
 
-func (e *rest) ListUsersV2(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	authUser, ok := middleware.GetAuthUser(ctx)
-	if !ok {
-		e.httpRespError(w, r, x.NewWithCode(x.CodeHTTPUnauthorized, "unauthenticated"))
-		return
-	}
-
-	filter := util.DecodeQuery[dto.UserFilterV2](r.URL.Query())
-
-	if authUser.Role != string(entity.RoleAdmin) {
-		filter.ID = authUser.UserID
-	}
-
-	users, pagination, err := e.svc.User.ListUsersV2(ctx, filter)
-	if err != nil {
-		e.httpRespError(w, r, err)
-		return
-	}
-
-	e.httpRespSuccess(w, r, http.StatusOK, users, pagination)
-}
-
 // UpdateUser godoc
 //
 //	@Summary		Update user
@@ -186,7 +163,7 @@ func (e *rest) UpdateUser(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	if err := dto.ValidateRequest(&req); err != nil {
+	if err := validator.ValidateRequest(&req); err != nil {
 		zerolog.Ctx(ctx).Warn().Err(err).Msg("validation_failed_update_user")
 		e.httpRespError(w, r, err)
 		return
